force-app/main/default/objects/Appointment__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact being shown property.</description>
    <inlineHelpText>Select the contact viewing the property</inlineHelpText>
    <label>Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>