force-app/main/default/objects/Appointment__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>Showing feedback</description>
    <inlineHelpText>Feedback from the potential buyer</inlineHelpText>
    <label>Feedback</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>