force-app/main/default/objects/Appointment__c/fields/Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>Interest_Level__c</fullName>
    <description>Interest level</description>
    <inlineHelpText>High, Medium, Low, No Interest</inlineHelpText>
    <label>Interest Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>