force-app/main/default/objects/Appointment__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related property</description>
    <inlineHelpText>Select the property being shown</inlineHelpText>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>