force-app/main/default/objects/Appointment__c/fields/Showing_Date__c.field-meta.xml
<CustomField>
    <fullName>Showing_Date__c</fullName>
    <description>Date and time of showing</description>
    <inlineHelpText>Schedule date and time for the showing</inlineHelpText>
    <label>Showing Date</label>
    <type>DateTime</type>
</CustomField>