force-app/main/default/objects/Appointment__c/fields/Showing_Type__c.field-meta.xml
<CustomField>
    <fullName>Showing_Type__c</fullName>
    <label>Showing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open House</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Virtual Tour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>