force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Showing_Date__c</columns>
    <columns>Showing_Type__c</columns>
    <columns>Duration__c</columns>
    <columns>Status__c</columns>
    <columns>Feedback__c</columns>
    <columns>Interest_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>